--- a/views/yodoo_module_serie.xml
+++ b/views/yodoo_module_serie.xml
@@ -82,6 +82,8 @@
                             </div>
                         </group>
                     </group>
+                    <notebook>
+                    </notebook>
                 </sheet>
             </form>
         </field>
