--- a/views/yodoo_serie.xml
+++ b/views/yodoo_serie.xml
@@ -34,6 +34,11 @@
                                    string="Modules"
                                    widget="statinfo"/>
                         </button>
+                        <button name="toggle_active" type="object" groups="base.group_user"
+                                class="oe_stat_button" icon="fa-archive">
+                            <field name="active" widget="boolean_button"
+                                   options='{"terminology": "archive"}'/>
+                        </button>
                     </div>
                     <div class="oe_title">
                         <h1><field name="name"/></h1>
