--- a/views/yodoo_module.xml
+++ b/views/yodoo_module.xml
@@ -95,7 +95,7 @@
                 <attribute name="create">false</attribute>
                 <attribute name="delete">false</attribute>
             </xpath>
-            <xpath expr="//div[@name='button_box']" position="inside">
+            <xpath expr="//div[@name='button_box']/*[1]" position="before">
                 <button class="oe_stat_button"
                         type="object"
                         icon="fa-cube"
