Added ability to specify modules to be added to new assemblies on creation.
Also, optimized synchronization of git sources (gitlab)

--- a/views/yodoo_module_serie.xml
+++ b/views/yodoo_module_serie.xml
@@ -91,6 +91,8 @@
                                         icon="fa-refresh"/>
                             </div>
                         </group>
+                        <field name="dependency_ids" colspan="4"/>
+                        <field name="dependency_all_ids" colspan="4"/>
                     </group>
                     <notebook>
                     </notebook>
