--- a/views/res_config_settings.xml
+++ b/views/res_config_settings.xml
@@ -33,6 +33,17 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-12 col-lg-6 o_setting_box">
+                                <div class="o_setting_left_pane">
+                                    <field name="module_yodoo_apps_assemby_sale"/>
+                                </div>
+                                <div class="o_setting_right_pane">
+                                    <label for="module_yodoo_apps_assembly_sale" class="o_light_label"/>
+                                    <div class="text-muted">
+                                        Convert yodoo assemblies to products and sale them.
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
