--- a/views/yodoo_module_version.xml
+++ b/views/yodoo_module_version.xml
@@ -96,6 +96,10 @@
                             <field name="price" widget='monetary' options="{'currency_field': 'currency_id'}"/>
                             <field name="currency_id" invisible="1"/>
                         </group>
+                        <group name="group_dependencies">
+                            <field name="dependency_python_ids" widget="many2many_tags"/>
+                            <field name="dependency_bin_ids" widget="many2many_tags"/>
+                        </group>
                     </group>
                     <group>
                         <field name="summary"/>
