--- a/views/res_config_settings.xml
+++ b/views/res_config_settings.xml
@@ -9,8 +9,23 @@
                 <div class="app_settings_block" data-string="Yodoo Apps" data-key="yodoo_apps"
                      groups="base.group_system">
                     <div name="yodoo_apps_settings">
+                        <h2>Yodoo Apps Configuration</h2>
+                        <div class="row mt16 o_settings_container" name="yodoo_apps_configuration">
+                            <div class="col-12 col-lg-6 o_setting_box">
+                                <div class="o_setting_left_pane"/>
+                                <div class="o_setting_right_pane">
+                                    <label for="yodoo_select_last_version_as"
+                                           string="Select Last Version As"
+                                           class="o_light_label"/>
+                                    <field name="yodoo_select_last_version_as"/>
+                                    <div class="text-muted">
+                                        Choose the way to select last version of module or module serie.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <h2>Install Yodoo Apps Features</h2>
-                        <div class="row mt16 o_settings_container" name="yodoo_apps_assembly_settings">
+                        <div class="row mt16 o_settings_container" name="yodoo_apps_install_features">
                             <div class="col-12 col-lg-6 o_setting_box">
                                 <div class="o_setting_left_pane">
                                     <field name="module_yodoo_apps_assembly"/>
@@ -57,7 +72,7 @@
         <field name="res_model">res.config.settings</field>
         <field name="view_mode">form</field>
         <field name="target">inline</field>
-        <field name="context">{'module' : 'yodoo_apps'}</field>
+        <field name="context">{'module' : 'yodoo_apps_database'}</field>
     </record>
 
     <menuitem id="yodoo_apps_settings" name="Settings"
