--- a/views/res_config_settings.xml
+++ b/views/res_config_settings.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="base.res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//div[hasclass('settings')]" position="inside">
-                <div class="app_settings_block" data-string="Yodoo Apps" data-key="yodoo_apps"
+                <div class="app_settings_block" data-string="Yodoo Apps" data-key="yodoo_apps_database"
                      groups="base.group_system">
                     <div name="yodoo_apps_settings">
                         <h2>Yodoo Apps Configuration</h2>
