--- a/views/yodoo_module_dependency_bin.xml
+++ b/views/yodoo_module_dependency_bin.xml
@@ -16,6 +16,7 @@
             <tree create="false" delete="false">
                 <field name="display_name" string="Name"/>
                 <field name="apt_package"/>
+                <field name="module_count" string="Modules"/>
             </tree>
         </field>
     </record>
@@ -26,6 +27,16 @@
             <form create="false" delete="false">
                 <sheet>
                     <div class="oe_button_box" name="button_box">
+                        <button class="oe_stat_button"
+                                type="object"
+                                icon="fa-cubes"
+                                name="action_show_modules">
+                            <field name="module_count"
+                                   string="Modules"
+                                   aria-label="Modules"
+                                   title="Modules"
+                                   widget="statinfo"/>
+                        </button>
                     </div>
                     <div class="oe_title">
                         <h1><field name="name" placeholder="Name..."/></h1>
